--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,6 @@ CLOUDINARY_SECRET_KEY = 'lS4h5ObBMVLTXD300rJpCo6i1fg'
 ADMIN_EMAIL = "admin@prescripto.com"
 ADMIN_PASSWORD = "qwerty123"
 JWT_SECRET = "greatstack"
+RAZORPAY_KEY_SECRET="uguUgFUbz1DoGlnPVI936N4H"
+RAZORPAY_KEY_ID="rzp_test_vzSLQFClYskOf1"
+CURRENCY="INR"
